[package]
name = "cursor-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bridge = { path = "../node-bridge", features = ["all"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
chrono = "0.4"
js-sys = "0.3"
sha256 = "1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }